codex-rs/tui_app_server/src/status/snapshots/orbit_code_tui_app_server__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui_app_server/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ Orbit Code (v0.0.0)                                            │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries de │
│  Directory: [[workspace]]                                          │
│  Permissions:      Custom (read-only, on-request)                  │
│  Agents.md:        <none>                                          │
│                                                                    │
│  Token usage:      1.9K total  (1K input + 900 output)             │
│  Context window:   100% left (2.25K used / 272K)                   │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
